--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -53,3 +53,34 @@
 	background-color: #ddd; 
 	padding: 10px
 }
+
+
+/* ************ PHOTO MODAL LIBARY CSS STYLE */ 
+
+
+.modal-dialog{
+
+	width: 90% !important;
+
+}
+
+.modal-body{
+
+	overflow: auto;
+	height: 500px !important; 
+	min-height: 300px !important;
+}
+
+
+.modal_thumbnails{
+	width: 200px;
+	height: 100px !important;
+}
+
+#set_user_image{
+	margin: 10px; 
+}
+
+#modal_sidebar{
+	position: fixed !important;
+}
